2015-08-13 Fixed issue with playing audio and video afetr clicking in dropdown button in Audio, TextAudio and Video modules
2015-08-12 Added handling draggable object with HTML structure and classes from Source List in Basic Math Gaps, Table and Text
2015-08-12 Added getting HTML structure and css classes from Source List in draggable object
2015-08-11 Fixed issue with adding images in Animated Page Progress module
2015-08-07 Added adding equals sign in Writing Calculation module
2015-08-07 Fixed issue with checking answers with white spaces in Basic Math Gaps module
2015-08-07 Fixed issue with checking answer in editor Preview
2015-08-04 Fixed issue with reseting and checking editable gaps in Basic Math Gaps and Table modules
2015-08-04 Fixed issue with closing bottom panel in IWB Toolbar module
2015-07-30 Fixed issue with errors when module is empty in Magic Boxes module
2015-07-29 Fixed issue with checking score in show answers mode in Animated Lesson Progress and Animated Page Progress modules
2015-07-29 Fixed issue with adding class on reset in Text module
2015-07-28 Added drag&drop feature in Table module
2015-07-28 Corrected mistakes in dictionary
2015-07-28 Added CSS classes to draggable gaps in Basic Math Gaps
2015-07-27 Fixed issue with checking score and show answers in Navigation Bar module
2015-07-27 Added group scoring
2015-07-27 Fixed issue with check mode in Graph module
2015-07-27 Added show answers mode in Graph module
2015-07-24 Added sending score in event data in Image Viewer module
2015-07-23 Added compiled Commons library in version 3.0.1 to icplayer libs
2015-07-23 Fixed issue that filled gap was not sending ItemReturned event on click with DraggableDroppableObject  in Commons (now in version 3.0.1)
2015-07-23 Fixed issue with error after reset and show answers in Limited Check module
2015-07-22 Added show/hide commands in YouTube module
2015-07-21 Fixed issue with alert on Safari Windows in Swiffy Animation module